<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_9" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Qe6-zm-yQK">
                                <rect key="frame" x="20" y="124" width="400" height="764"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w1b-Wh-giD">
                                        <rect key="frame" x="0.0" y="0.0" width="400" height="23.666666666666668"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cf1-XE-wND" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="364" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White (iOS)"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81m-5U-X6L" userLabel="Index Label">
                                                <rect key="frame" x="364" y="0.0" width="36" height="23.666666666666668"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White (iOS)"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0eh-Bb-pSp" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="43.666666666666629" width="400" height="600"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="0eh-Bb-pSp" secondAttribute="height" multiplier="2:3" id="cuP-ZU-VXa"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5KJ-6F-NSI" userLabel="Question Label">
                                        <rect key="frame" x="29.666666666666657" y="663.66666666666663" width="340.66666666666674" height="20.333333333333371"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White (iOS)"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Glw-qG-BGN">
                                        <rect key="frame" x="0.0" y="704" width="400" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="55m-9o-KGQ">
                                                <rect key="frame" x="0.0" y="0.0" width="190" height="60"/>
                                                <color key="backgroundColor" name="YP White (iOS)"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black (iOS)"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yQr-Db-Grv"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYX-WV-emm">
                                                <rect key="frame" x="210" y="0.0" width="190" height="60"/>
                                                <color key="backgroundColor" name="YP White (iOS)"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black (iOS)"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nCz-m2-6Y1"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="Hdh-aG-Vtt"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="0eh-Bb-pSp" secondAttribute="trailing" id="3qy-6H-NHO"/>
                                    <constraint firstItem="Cf1-XE-wND" firstAttribute="leading" secondItem="Qe6-zm-yQK" secondAttribute="leading" id="8Y5-uO-XRj"/>
                                    <constraint firstItem="0eh-Bb-pSp" firstAttribute="leading" secondItem="Qe6-zm-yQK" secondAttribute="leading" id="ELD-Lo-mVF"/>
                                    <constraint firstItem="0eh-Bb-pSp" firstAttribute="top" secondItem="Cf1-XE-wND" secondAttribute="bottom" constant="20" id="Vwq-CH-mbX"/>
                                </constraints>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="zO9-8t-uDa">
                                <rect key="frame" x="210" y="468" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black (iOS)"/>
                        <constraints>
                            <constraint firstItem="55m-9o-KGQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="48q-wg-CVA"/>
                            <constraint firstItem="w1b-Wh-giD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6d0-F4-r4B"/>
                            <constraint firstItem="zO9-8t-uDa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8bL-GF-vvH"/>
                            <constraint firstItem="Qe6-zm-yQK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Evs-jS-bDH"/>
                            <constraint firstItem="Glw-qG-BGN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="S0D-Lp-kW2"/>
                            <constraint firstItem="Qe6-zm-yQK" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Sd8-40-Yid"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0eh-Bb-pSp" secondAttribute="trailing" constant="20" id="aZ1-2I-ZZV"/>
                            <constraint firstItem="zO9-8t-uDa" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cC8-ZM-8VX"/>
                            <constraint firstItem="Glw-qG-BGN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fRf-Qk-zea"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qe6-zm-yQK" secondAttribute="trailing" constant="20" id="iNH-CX-bul"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Glw-qG-BGN" secondAttribute="bottom" id="lrV-hE-7WU"/>
                            <constraint firstItem="0eh-Bb-pSp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="peN-vG-Z1f"/>
                            <constraint firstItem="Qe6-zm-yQK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ttV-3E-08u"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="zO9-8t-uDa" id="fTq-YD-C1g"/>
                        <outlet property="countLabel" destination="81m-5U-X6L" id="b9j-RB-UJQ"/>
                        <outlet property="imageView" destination="0eh-Bb-pSp" id="X6K-PE-WeS"/>
                        <outlet property="noButton" destination="55m-9o-KGQ" id="8ot-Z3-dtj"/>
                        <outlet property="questionLabel" destination="5KJ-6F-NSI" id="Tab-0S-aff"/>
                        <outlet property="yesButton" destination="AYX-WV-emm" id="he4-oo-gJY"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.725190839694655" y="54.929577464788736"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black (iOS)">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White (iOS)">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
